// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepk8ClusterDetails render  1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Username and Password"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="width: 42%;"
            >
              <div
                class="bp3-form-group"
                data-id="usernamefieldType-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="label"
                    >
                      <label>
                        Username
                      </label>
                      <div
                        class="bp3-form-group labelSelect"
                        data-id="usernamefieldType-3"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="usernamefieldType"
                                  placeholder="Search..."
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="Plaintext"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                    icon="caret-down"
                                  >
                                    <svg
                                      data-icon="caret-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        caret-down
                                      </desc>
                                      <path
                                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group textCss"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="usernametextField"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-5"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Password
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="password"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            Create or Select a Secret
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-6"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Stepk8ClusterDetails render  2`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-intent-danger"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  Master URL is required
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Username and Password"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="width: 42%;"
            >
              <div
                class="bp3-form-group bp3-intent-danger"
                data-id="usernamefieldType-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="label"
                    >
                      <label>
                        Username
                      </label>
                      <div
                        class="bp3-form-group labelSelect"
                        data-id="usernamefieldType-3"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="usernamefieldType"
                                  placeholder="Search..."
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="Plaintext"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                    icon="caret-down"
                                  >
                                    <svg
                                      data-icon="caret-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        caret-down
                                      </desc>
                                      <path
                                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group textCss"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="usernametextField"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    Username is a required field
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-intent-danger"
                data-id="null-5"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Password
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="password"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            Create or Select a Secret
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    Password is a required field
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-6"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Stepk8ClusterDetails render  3`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-intent-danger"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value="dummyMasterUrl"
                  />
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  Master URL is required
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Username and Password"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="width: 42%;"
            >
              <div
                class="bp3-form-group bp3-intent-danger"
                data-id="usernamefieldType-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="label"
                    >
                      <label>
                        Username
                      </label>
                      <div
                        class="bp3-form-group labelSelect"
                        data-id="usernamefieldType-3"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="usernamefieldType"
                                  placeholder="Search..."
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="Plaintext"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                    icon="caret-down"
                                  >
                                    <svg
                                      data-icon="caret-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        caret-down
                                      </desc>
                                      <path
                                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group textCss"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="usernametextField"
                            type="text"
                            value="dummyusername"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    Username is a required field
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-intent-danger"
                data-id="null-5"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Password
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="password"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            Create or Select a Secret
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    Password is a required field
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-6"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Stepk8ClusterDetails render edit mode  1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value="dummymasterUrl"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Username and Password"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="width: 42%;"
            >
              <div
                class="bp3-form-group"
                data-id="usernamefieldType-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="label"
                    >
                      <label>
                        Username
                      </label>
                      <div
                        class="bp3-form-group labelSelect"
                        data-id="usernamefieldType-3"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="usernamefieldType"
                                  placeholder="Search..."
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="Plaintext"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                    icon="caret-down"
                                  >
                                    <svg
                                      data-icon="caret-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        caret-down
                                      </desc>
                                      <path
                                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group textCss"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="usernametextField"
                            type="text"
                            value="username"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-5"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Password
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="password"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            k8serviceToken
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-6"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Stepk8ClusterDetails render edit mode  service token 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value="master"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Service Account"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="width: 42%;"
            >
              <div
                class="bp3-form-group"
                data-id="null-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      Service Account Token
                    </label>
                    <button
                      class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                      data-testid="serviceAccountToken"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          style="align-items: center; width: 100%;"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                            >
                              <g
                                fill="none"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <span>
                            k8serviceToken
                          </span>
                        </div>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-3"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Stepk8ClusterDetails render edit mode if correct auth type is not given  1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value="nmbshg"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-2"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Stepk8ClusterDetails render edit mode oidc update 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main secondStep"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium StyledProps--margin-top-small StyledProps--color StyledProps--color-black"
    >
      Details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main clusterWrapper"
          >
            <div
              class="cardRow"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected"
                data-index="0"
                tabindex="0"
              >
                <div
                  class="StyledProps--font StyledProps--main card selectedCard"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify master url and credentials
                  </span>
                  <span
                    class="bp3-icon StyledProps--main StyledProps--margin-small"
                    data-icon="deployment-success-new"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                    >
                      <path
                        d="M4 0h6c2.2 0 4 1.8 4 4v6c0 2.2-1.8 4-4 4H4c-2.2 0-4-1.8-4-4V4c0-2.2 1.8-4 4-4z"
                        fill="#38d168"
                      />
                      <path
                        d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                        fill="#fff"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card Card--disabled"
                data-index="1"
              >
                <div
                  class="StyledProps--font StyledProps--main card"
                >
                  <span
                    class="StyledProps--font StyledProps--main textInfo StyledProps--inline"
                  >
                    Specify cluster details and credentials in harness-delegate.yaml files on your Harness Delegates
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="masterUrl-0"
            >
              <label
                class="bp3-label"
                for="masterUrl"
              >
                Master URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="masterUrl"
                    placeholder="/url"
                    type="text"
                    value="nmbshg"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main authHeaderRow"
            >
              <span
                class="StyledProps--font StyledProps--main authTitle StyledProps--inline"
              >
                Authentication
              </span>
              <div
                class="bp3-form-group authTypeSelect"
                data-id="authType-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="authType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="OpenID Connect"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="oidcIssuerUrl-2"
            >
              <label
                class="bp3-label"
                for="oidcIssuerUrl"
              >
                OIDC Issuer URL
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="oidcIssuerUrl"
                    type="text"
                    value="hsdgjgj"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main applyFlex"
            >
              <div
                class="StyledProps--font StyledProps--main"
                style="width: 42%;"
              >
                <div
                  class="bp3-form-group"
                  data-id="oidcUsernamefieldType-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="label"
                      >
                        <label>
                          OIDC Username
                        </label>
                        <div
                          class="bp3-form-group labelSelect"
                          data-id="oidcUsernamefieldType-4"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-popover-wrapper Select--main bp3-fill"
                            >
                              <div
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="oidcUsernamefieldType"
                                    placeholder="Search..."
                                    style="padding-right: 0px;"
                                    type="text"
                                    value="Plaintext"
                                  />
                                  <span
                                    class="bp3-input-action"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                      icon="caret-down"
                                    >
                                      <svg
                                        data-icon="caret-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          caret-down
                                        </desc>
                                        <path
                                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group textCss"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="oidcUsernametextField"
                              type="text"
                              value="dmhdj"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-6"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        OIDC Password
                      </label>
                      <button
                        class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                        data-testid="oidcPassword"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                            style="align-items: center; width: 100%;"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="key-main"
                              style="height: 12px;"
                            >
                              <svg
                                height="24"
                                width="24"
                              >
                                <g
                                  fill="none"
                                  stroke="#1C1C28"
                                  stroke-width="0.5"
                                >
                                  <path
                                    d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                  />
                                  <path
                                    d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                  />
                                </g>
                              </svg>
                            </span>
                            <span>
                              k8serviceToken
                            </span>
                          </div>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-top-medium StyledProps--margin-left-xxlarge"
                style="width: 42%;"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-7"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        OIDC Client ID
                      </label>
                      <button
                        class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                        data-testid="oidcCleintId"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                            style="align-items: center; width: 100%;"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="key-main"
                              style="height: 12px;"
                            >
                              <svg
                                height="24"
                                width="24"
                              >
                                <g
                                  fill="none"
                                  stroke="#1C1C28"
                                  stroke-width="0.5"
                                >
                                  <path
                                    d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                  />
                                  <path
                                    d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                  />
                                </g>
                              </svg>
                            </span>
                            <span>
                              k8serviceToken
                            </span>
                          </div>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-8"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        OIDC Secret
                      </label>
                      <button
                        class="bp3-button StyledProps--font Button--button StyledProps--main inputButton"
                        data-testid="oidcCleintSecret"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                            style="align-items: center; width: 100%;"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="key-main"
                              style="height: 12px;"
                            >
                              <svg
                                height="24"
                                width="24"
                              >
                                <g
                                  fill="none"
                                  stroke="#1C1C28"
                                  stroke-width="0.5"
                                >
                                  <path
                                    d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                  />
                                  <path
                                    d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                  />
                                </g>
                              </svg>
                            </span>
                            <span>
                              k8serviceToken
                            </span>
                          </div>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group formFieldWidth"
              data-id="oidcScopes-9"
            >
              <label
                class="bp3-label"
                for="oidcScopes"
              >
                OIDC Scopes (Optional)
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="oidcScopes"
                    type="text"
                    value="dhgjdd"
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="skipDefaultValidation-10"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                >
                  <input
                    name="skipDefaultValidation"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  Skip default namespace validation
                </label>
              </div>
            </div>
          </div>
          <button
            class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save and Continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
